[package]
name = "scathanna"
version = "2.0.0"
authors = ["Arne Vansteenkiste <barnex@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
gl = "0.14"
gl_safe = {path = "../libs/gl_safe"}
vector = {path = "../libs/vector"}
glutin = "0.28"
scathanna_core = {path = "../scathanna_core"}
structopt = "0.3"

[profile.release]
lto = true
