[package]
name = "scathanna_client"
version = "1.0.0"
authors = ["Arne Vansteenkiste <barnex@gmail.com>"]
edition = "2021"

[dependencies]
any_result = {path = "../libs/any_result"}
gl = "0.14"
gl_safe = {path = "../libs/gl_safe"}
vector = {path = "../libs/vector"}
glutin = "0.26"
scathanna_core = {path = "../scathanna_core"}
structopt = "0.3"

[profile.release]
lto = true
rustflags = ["-C", "target-feature=+crt-static"]