[package]
name = "scathanna_core"
version = "1.0.0"
authors = ["Arne Vansteenkiste <barnex@gmail.com>"]
edition = "2021"

[dependencies]
any_result = { path = "../libs/any_result"}
bincode = "1.3"
flate2 = "1"
fnv = "1"
gl = "0.14"
gl_obj = { path = "../libs/gl_obj" }
gl_safe = { path = "../libs/gl_safe" }
imageutil = { path = "../libs/imageutil"}
matrix = { path = "../libs/matrix"}
rand = "0.8"
rand_distr = "0.4"
rayon = "1.5"
raytrace = { path = "../libs/raytrace"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1"
structopt = "0.3"
vector = { path = "../libs/vector"}
wavefrontobj = { path = "../libs/wavefrontobj"}